--- a/index.html
+++ b/index.html
@@ -303,5 +303,101 @@
         </div>
     </section>
     <!-- counter area end here -->
+
+    <!-- creative team member  -->
+    <section class="team-area pt-100 pb-100">
+        <div class="container">
+            <div class="section-title text-center mb-70">
+                <h4>What to do</h4>
+                <h2>Creative Team Members</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, incidunt. Illo enim quidem rem amet et impedit provident magni labore?</p>
+            </div>
+
+            <div class="team">
+                <div class="single-team" style="background-image: url('assets/img/em1.jpg');">
+                    <div class="team-content">
+                        <h4>John Doe <span>Web Developer</span></h4>
+                        <a href="#"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+
+                <div class="single-team" style="background-image: url('assets/img/em2.jpg');">
+                    <div class="team-content">
+                        <h4>John Doe <span>Web Developer</span></h4>
+                        <a href="#"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+
+                <div class="single-team" style="background-image: url('assets/img/em3.jpg');">
+                    <div class="team-content">
+                        <h4>John Doe <span>Web Developer</span></h4>
+                        <a href="#"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- creative team memner end -->
+
+    <!-- price area start here -->
+    <section class="price-area pt-100 pb-100">
+        <div class="container">
+            <div class="section-title text-center mb-70">
+                <h4>What to do</h4>
+                <h2>Our Prices</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, incidunt. Illo enim quidem rem amet et impedit provident magni labore?</p>
+            </div>
+            <div class="price">
+                <div class="single-price">
+                    <h5>Standerd</h5>
+                    <h3>$99 <span>/mo</span></h3>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    <a href="" class="btn btn-box">purchase now</a>
+                </div>
+
+                <div class="single-price active">
+                    <h5>Primium</h5>
+                    <h3>$199 <span>/mo</span></h3>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    <a href="" class="btn btn-box">purchase now</a>
+                </div>
+
+                <div class="single-price">
+                    <h5>Pro</h5>
+                    <h3>$299 <span>/mo</span></h3>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    <a href="" class="btn btn-box">purchase now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--price area end here  -->
 </body>
 </html>
