--- a/index.html
+++ b/index.html
@@ -399,5 +399,99 @@
         </div>
     </section>
     <!--price area end here  -->
+
+    <!-- testimonial area -->
+    <section class="testimonials-area pt-100 pb-100" style="background-image: url('assets/img/1234.jpg');">
+        <div class="container">
+            <div class="section-title text-center mb-70">
+                <h4>What to do</h4>
+                <h2>What Clients Say</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, incidunt. Illo enim quidem rem amet et impedit provident magni labore?</p>
+            </div>
+            <div class="testimonials">
+                <div class="single-testimonial">
+                    <i class="fas fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus dolores dicta dolorum animi doloremque officia reprehenderit ipsum ullam mollitia totam laboriosam unde, error tempora accusamus.</p>
+                    <div class="author-info">
+                        <img src="assets/img/em1.jpg" alt="author image">
+                        <h4>Jhon Doe <span>Web Developer</span></h4>
+                    </div>
+                </div>
+
+                <div class="single-testimonial">
+                    <i class="fas fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus dolores dicta dolorum animi doloremque officia reprehenderit ipsum ullam mollitia totam laboriosam unde, error tempora accusamus.</p>
+                    <div class="author-info">
+                        <img src="assets/img/em2.jpg" alt="author image">
+                        <h4>Jhon Doe <span>Software Developer</span></h4>
+                    </div>
+                </div>
+
+                <div class="single-testimonial">
+                    <i class="fas fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus dolores dicta dolorum animi doloremque officia reprehenderit ipsum ullam mollitia totam laboriosam unde, error tempora accusamus.</p>
+                    <div class="author-info">
+                        <img src="assets/img/em3.jpg" alt="author image">
+                        <h4>Jhon Doe <span>Web Designer</span></h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- testimonial area end -->
+
+    <!-- blog area -->
+    <section class="blog-area pt-100 pb-100">
+        <div class="container">
+            <div class="section-title text-center mb-70">
+                <h4>What to do</h4>
+                <h2>Latest News</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, incidunt. Illo enim quidem rem amet et impedit provident magni labore?</p>
+            </div>
+
+            <div class="blog">
+                <div class="single-blog">
+                    <div class="blog-img">
+                        <img src="assets/img/blog1.jpg" alt="blog image">
+                        <div class="blog-meta">
+                            <a href="#"><i class="far fa-user"></i> admin</a>
+                            <a href="#"><i class="far fa-comment"></i> 5 Comment</a>
+                        </div>
+                        <h4>Blog Title</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore repellat sed modi aut laborum! A, earum deleniti porro corporis est voluptas aspernatur harum quod asperiores?</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+
+                <div class="single-blog">
+                    <div class="blog-img">
+                        <img src="assets/img/blog2.jpg" alt="blog image">
+                        <div class="blog-meta">
+                            <a href="#"><i class="far fa-user"></i> admin</a>
+                            <a href="#"><i class="far fa-comment"></i> 5 Comment</a>
+                        </div>
+                        <h4>Blog Title</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore repellat sed modi aut laborum! A, earum deleniti porro corporis est voluptas aspernatur harum quod asperiores?</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+
+                <div class="single-blog">
+                    <div class="blog-img">
+                        <img src="assets/img/blog3.png" alt="blog image">
+                        <div class="blog-meta">
+                            <a href="#"><i class="far fa-user"></i> admin</a>
+                            <a href="#"><i class="far fa-comment"></i> 5 Comment</a>
+                        </div>
+                        <h4>Blog Title</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore repellat sed modi aut laborum! A, earum deleniti porro corporis est voluptas aspernatur harum quod asperiores?</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- end blog area -->
 </body>
 </html>
