--- a/index.html
+++ b/index.html
@@ -493,5 +493,27 @@
         </div>
     </section>
     <!-- end blog area -->
+
+    <!-- subscribe section start here -->
+    <section class="subscribe-area pt-100 pb-100"  style="background-image: url('assets/img/1234.jpg');">
+        <div class="container">
+            <div class="section-title text-center mb-70">
+                <h2>Subscribe Us</h2>
+                <p>We Don't Spam it!</p>
+            </div>
+            <div class="subscribe">
+                <form action="#">
+                    <input type="email" placeholder="Enter Your Email Address">
+                    <input type="submit" value="Subscribe">
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- subscribe section end here -->
+
+    <!-- contact section start here -->
+    
+
+    <!-- contact section end here -->
 </body>
 </html>
