--- a/index.html
+++ b/index.html
@@ -512,8 +512,75 @@
     <!-- subscribe section end here -->
 
     <!-- contact section start here -->
-    
+    <section class="contact-area pt-100 pb-100">
+        <div class="container">
+            <div class="section-title text-center mb-70">
+                <h4>What to do</h4>
+                <h2>Contact Us</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, incidunt. Illo enim quidem rem amet et impedit provident magni labore?</p>
+            </div>
+
+            <div class="contact">
+                <div class="contact-address">
+                    <div class="single-contact">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <h4>address: <span>1234 street, USA</span></h4>
+                    </div>
+                    <div class="single-contact">
+                        <i class="far fa-envelope"></i>
+                        <h4>email: <span>amit@gmail.com</span></h4>
+                    </div>
+                    <div class="single-contact">
+                        <i class="fas fa-phone-alt"></i>
+                        <h4>phone: <span>+8801724370817</span></h4>
+                    </div>
+                    <div class="single-contact">
+                        <i class="fas fa-globe-europe"></i>
+                        <h4>Website: <span>www.amitgoswami.com</span></h4>
+                    </div>
+                </div>
+                <div class="contact-form">
+                    <form action="">
+                        <input type="text" placeholder="Enter Your Name">
+                        <input type="text" placeholder="Enter Your Subject">
+                        <input type="emaail" placeholder="Enter Your Email">
+                        <input type="number" placeholder="Enter Your Number">
+                        <textarea placeholder="message"></textarea>
+                        <input type="submit" value="send">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- contact section end here -->
-</body>
+
+    <!-- partner area start here -->
+    <section class="partner-area text-center">
+        <div class="container">
+            <div class="partner">
+                <img src="assets/img/logo1.jpg">
+                <img src="assets/img/logo1.jpg">
+                <img src="assets/img/logo1.jpg">
+                <img src="assets/img/logo1.jpg">
+                <img src="assets/img/logo1.jpg">
+                <img src="assets/img/logo1.jpg">
+            </div>
+        </div>
+    </section>
+
+    <!-- partner area end here -->
+    
+    <!-- footer area start here -->
+    <footer class="footer-area text-center pt-40 pb-40">
+        <div class="container">
+            <a href="#"><i class="fab fa-facebook-square"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+
+            <p>&copy; 2022 All Rights Reserved.</p>
+        </div>
+    </footer>
+    <!-- footer area end here -->
 </html>
