--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- magnefic popup css link -->
     <link rel="stylesheet" href="assets/css/plagins/magnefic-popup/magnefic-popup.css">
+    <!-- slick css link -->
+    <link rel="stylesheet" href="assets/css/plagins/slick_css/slick.min.css">
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -592,6 +594,7 @@
     <script src="assets/js/magnefic-popup.min.js"></script>
     <script src="assets/js/waypoint.min.js"></script>
     <script src="assets/js/counterup.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
     <script src="assets/js/main.js"></script>
     </body>
 </html>
